@@ -1,5 +1,7 @@
 <?php
-if (!defined ('TYPO3_MODE')) 	die ('Access denied.');
+if (!defined ('TYPO3_MODE')) {
+	die ('Access denied.');
+}
 
 if (TYPO3_MODE=='BE')	{
 	$GLOBALS['TBE_MODULES_EXT']['xMOD_alt_clickmenu']['extendCMclasses'][]=array(
@@ -11,30 +13,4 @@ if (TYPO3_MODE=='BE')	{
 		t3lib_extMgm::addModule('web', 'txversionM1', '', t3lib_extMgm::extPath($_EXTKEY) . 'cm1/');
 	}
 }
-
-
-
-
-/**
- * Table "sys_workspace":
- */
-$TCA['sys_workspace'] = array(
-	'ctrl' => array(
-		'label' => 'title',
-		'tstamp' => 'tstamp',
-		'title' => 'LLL:EXT:lang/locallang_tca.php:sys_workspace',
-		'adminOnly' => 1,
-		'rootLevel' => 1,
-		'delete' => 'deleted',
-		'iconfile' => 'sys_workspace.png',
-		'typeicon_classes' => array(
-			'default' => 'mimetypes-x-sys_workspace'
-		),
-		'dynamicConfigFile' => t3lib_extMgm::extPath($_EXTKEY) . 'tca.php',
-		'versioningWS_alwaysAllowLiveEdit' => true,
-		'dividers2tabs' => true
-	)
-);
-
-
 ?>
