@@ -1,3 +1,7 @@
+2011-02-17  Oliver Hader  <oliver.hader@typo3.org>
+
+	* Fixed bug #12615: Dependencies in sysext 'version' and 'workspaces'
+
 2011-01-26  Tolleiv Nietsch <typo3@tolleiv.de>
 
 	* Reapplied #17284: Formprotection persistToken method is called too often, causing unnecessary DB-load - included in 4.5.0 (Thanks to Helmut Hummel / Ernesto Baschny)
